Added a footer and blended it well into the background

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="footer">Words go here!</div>
+    <div class="footer">
+        
+    </div>
 </body>
 <script src="javascript.js"></script>
 </html>
