Added book image, positioned it absolutely and gave negative z-index so that our table we made can sit on top of the image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="bookImage">
+        <img class="bookImage" src="images/open book image.png" alt="" srcset="" width="500px">
+        <table>
+            <th>Enter Your Book Details</th>
+            <tr>
+                <td>
+                    <input type="text">
+                </td>
+                <td>
+                    <input type="text">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="text">
+                </td>
+                <td>
+                    <input type="text">
+                </td>
+            </tr>
+        </table>
+    </div>
     <div class="footer">
         <span class="imageCredit">
             Photo by <a href="https://unsplash.com/@itfeelslikefilm?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">🇸🇮 Janko Ferlič</a> on <a href="https://unsplash.com/photos/sfL_QOnmy00?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
