Added a new font for the typed text, cleaned up the table and made it look nicer for adding

--- a/index.html
+++ b/index.html
@@ -7,27 +7,32 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="bookImage">
-        <img class="bookImage" src="images/open book image.png" alt="" srcset="" width="500px">
+    <div class="bookContainerSize">
         <table>
             <th>Enter Your Book Details</th>
             <tr>
                 <td>
+                    <label for="title">Title:</label>
+                    <input type="text" name="title">
+                </td>
+                <td>
+                    <label for="title">Author:</label>
                     <input type="text">
                 </td>
                 <td>
-                    <input type="text">
-                </td>
-            </tr>
-            <tr>
-                <td>
+                    <label for="title">Pages:</label>
                     <input type="text">
                 </td>
                 <td>
+                    <label for="title">Read:</label>
                     <input type="text">
                 </td>
             </tr>
         </table>
+    </div>
+    <div class="bookImage">
+        <img class="bookImage" src="images/open book image.png" alt="" srcset="">
+        
     </div>
     <div class="footer">
         <span class="imageCredit">
