Added button for adding a book with some simple animations / transitions

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="bookContainerSize">
-        <table>
+    <div class="bookContainerSize hide-item">
+        <table class="hide-item">
             <th>Enter Your Book Details</th>
             <tr>
                 <td>
@@ -18,7 +18,7 @@
                 <td>
                     <label for="title">Author:</label>
                     <input type="text">
-                </td>
+                   </td>
                 <td>
                     <label for="title">Pages:</label>
                     <input type="text">
@@ -30,9 +30,11 @@
             </tr>
         </table>
     </div>
-    <div class="bookImage">
+    <div class="bookImage hide-item">
         <img class="bookImage" src="images/open book image.png" alt="" srcset="">
-        
+    </div>
+    <div class="bookButtonContainer">
+        <button class="addBookButton">Add a book</button>
     </div>
     <div class="footer">
         <span class="imageCredit">
