--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
             <tr>
                 <td>
                     <label for="title">Title:</label>
-                    <input type="text" name="title">
+                    <input type="text" name="title" id="title">
                 </td>
                 <td>
-                    <label for="title">Author:</label>
-                    <input type="text">
+                    <label for="author">Author:</label>
+                    <input type="text" name="author" id="author">
                    </td>
                 <td>
-                    <label for="title">Pages:</label>
-                    <input type="text">
+                    <label for="pages">Pages:</label>
+                    <input type="text" name="pages" id="pages">
                 </td>
                 <td>
-                    <label for="title">Read:</label>
-                    <input type="text">
+                    <label for="read">Read:</label>
+                    <input type="text" name="read" id="read">
                 </td>
             </tr>
         </table>
@@ -34,7 +34,7 @@
         <img class="bookImage" src="images/open book image.png" alt="" srcset="">
     </div>
     <div class="bookButtonContainer">
-        <button class="addBookButton">Add a book</button>
+        <button class="addBookButton" id="addBookButton" type="button">Add a book</button>
     </div>
     <div class="footer">
         <span class="imageCredit">
