Added functionality for creating books with the constructor and pushing them to an array for storage. Added a submit button to the form, but still needs the inputs to be assigned to a property of the object.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6L38CnFJq1rnY4tK8ULfi0?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+    </iframe>
     <div id="bookContainerSize" class="hide-item">
         <table id="tableForm" class="hide-item">
             <form action="">
@@ -27,6 +29,11 @@
                     <td>
                         <label for="read">Read:</label>
                         <input type="text" name="read" id="read">
+                    </td>
+                    <td>
+                        <button class="submitBook" type="submit">
+                            ADD BOOK
+                        </button>
                     </td>
                 </tr>
             </form>
